# egfrd

./: EGFRDSimulator.hpp  EGFRDSimulatorTraits.hpp  Makefile.am  TODO  World.hpp  WorldTraits.hpp  configure.ac  egfrd.py  gfrdbase.py  greens_function_wrapper.py  model2.py  myrandom.py  pair.py  precompiled-headers.sh  pyGFRD.cpp  rename.sh  single.py  vtk_xml_serial_unstructured.py  vtklogger.py
binding/: ConsoleAppender.cpp  LogAppender.cpp  Logger.cpp  LoggerManager.cpp  Makefile.am  PythonAppender.cpp  bd_propagator_class.cpp  binding_common_EGFRDSimulator.hpp  binding_common_EGFRDSimulatorTraits.hpp  binding_common_World.hpp  binding_common_WorldTraits.hpp  box_class.cpp  cylinder_class.cpp  domain_classes.cpp  domain_id_class.cpp  egfrd_simulator_classes.cpp  event_classes.cpp  exception_classes.cpp  matrix_space_classes.cpp  model_class.cpp  module_functions.cpp  multi_particle_container_class.cpp  network_rules_class.cpp  network_rules_wrapper_class.cpp  particle_class.cpp  particle_container_class.cpp  particle_id_class.cpp  particle_model_class.cpp  particle_simulator_classes.cpp  plane_class.cpp  position_converters.cpp  random_number_generator_class.cpp  reaction_record_classes.cpp  shape_converters.cpp  shell_classes.cpp  shell_id_class.cpp  species_id_class.cpp  species_type_class.cpp  sphere_class.cpp  structure_classes.cpp  (+3 more)
doc/: Makefile.am
samples/: dimer-check1  dimer-check1-2e-6  dimer-check1-3e-7  dimer-check1-5e-6  dimer-check2  dimer-check2-2e-6  dimer-check2-3e-7  dimer-check2-5e-6
samples/dimer/: dimer.py
samples/features/: features.nb  features.py  features_interactions.py  features_model.py  some_test.py  test.nb  test.py  test_model.py  three-reactions.nb  three_reactions.py  three_reactions_model.py
samples/mapk/: README  make_jobs11.py
test/: EGFRDFeatures_test.py  EGFRDSimulator_test.py  Makefile.am  paraview.py
visualization/: helix.py  helpers.py  pipeline.py  pv-dump.py  servermanager.py  setup.sh  some_script.sh  tensorGlyph.xml  tensorGlyphCustomSource.xml  test1.py  test2.py  vtklogger.py
